# fastboard-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: appexception.hpp  application.cpp  application.hpp  data.hpp  game.cpp  game.hpp  main.cpp  options.cpp  options.hpp  ui.hpp
src/win/: ui.cpp  ui.hpp
